alignment corrected

--- a/src/component/style.css
+++ b/src/component/style.css
@@ -309,11 +309,10 @@ pre code {
   background: var(--input-bg);
   align-items: center;
   display: flex;
-    padding: 12px 20px;
-    gap: 30px;
-    width: 90%;
-    margin: 0 auto;
-
+  padding: 12px 20px;
+  gap: 30px;
+    /* width: 90%;
+    margin: 0 auto; */
 }
 
 .input-bar input {
